--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12,3 +12,10 @@ html, body {
     background: linear-gradient(126deg, rgb(167, 97, 51) 0%, rgb(55, 78, 163) 100%);
     color: white;
 }
+
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    height: 150vh;
+}
